recursion.lessons.recursion.tree.Tree.scala.error
Tree:18: error: Missing closing brace `}' assumed here
	def subtree(steps:Int, length:Double, angle:Double, shrink:Double)	{
        ^